fixed button spacing

--- a/public/css/exercise.scss
+++ b/public/css/exercise.scss
@@ -30,9 +30,9 @@ a {
    box-shadow: 0.1rem 0.1rem 0.2rem 0rem #000A;
    display: flex;
    flex-direction: row;
-   font-family: inherit;
    margin: auto;
-   padding: 0.3rem;
+   margin-top: 10px;
+   padding: 10px;
    
 }
 
